# Assembley-x86-64-bit-interpreter

./: .gitignore  Makefile  README.md  alu.py  c_u.py  conftest.py  control_unit.py  data_memory.py  data_path.py  exemplo.asm  exemplo.json  exemplo2.json  exemplo3.asm  exemplo3.json  exemploCpuOps.asm  exemploCpuOps.json  exemploerros.json  exit_codes.py  fpu.py  instructions.py  interpreter.py  main.py  memory_eng.c  operations.c  process_loader.py  pyproject.toml  register.py  register_manager.py  registers.c  segment_mapper.py  storage.py  test_cpu.py  types.py  valid_instructions.json
FUs/: alu.py  common_classes.py  data_path.py  fpu.py
_src/FUs/: alu.py  common_classes.py  data_path.py  fpu.py
_src/bridges/: data_memory.py
_src/helpers/: my_types.py  storage.py
_src/parsing/: control_unit.py  instruction_parser.py  patter_matching_helpers.py  segment_mapper.py
bridges/: README.md  data_memory.py  register_manager.py
docs/: architecture.md  assembly_specs.md  c_engine.md  integration.md  storaging.md  testing_guide.md
execution/: README.md
execution/include/: memory_eng.h  operations.h  registers.h
execution/src/: memory_eng.c  operations.c  registers.c
helpers/: README.md  my_types.py  storage.py
include/: memory_eng.h  operations.h  registers.h
interpreter/: __init__.py  interpreter.py
parsing/: control_unit.py  instruction_parser.py  patter_matching_helpers.py  segment_mapper.py
parsing_execution/: segment_mapper.py
src/: memory_eng.c  operations.c  registers.c
tests/: test_env.py
tests/FUs/: test_alu.py  test_data_path.py  (+1 more)
(+29 files in other folders)
