[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-simulator"
version = "0.1.0"
description = "x86-64 assembly interpreter (Python + C)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["interpreter/_src"]

[tool.setuptools.package-dir]
"" = "interpreter/_src"

[project.optional-dependencies]
test = ["pytest"]